--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="./src/assets/FindJobLogo.svg" /> -->
-    <link rel="icon" type="image" href="./src/assets/FindJobLogo.webp" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/FindJob.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Job</title>
   </head>
